--- a/css/main.css
+++ b/css/main.css
@@ -219,6 +219,20 @@ img{
     background-color: #0056b3; /* A darker blue on hover */
 }
 
+.skip {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+.skip:focus {
+  position: static;
+  width: auto;
+  height: auto;
+}
 
 @media screen and (max-width: 880px) {
   /* Text Elements */
