--- a/css/main.css
+++ b/css/main.css
@@ -219,7 +219,7 @@ body > .row.footer.full-width-row {
   margin-bottom: 0;
 }
 
-img{
+img:not(.profile-icon){
   width: 80%;
   min-width: 200px;
 }
@@ -556,4 +556,71 @@ img{
     text-align: center;
     font-size: 13px;
   }
+}
+
+/* Contact Page Styling */
+.vcard {
+  padding: 20px 0;
+}
+
+.credentials,
+.org-info,
+.contact-methods,
+.professional-profiles {
+  margin-bottom: 2em;
+  padding-bottom: 1.5em;
+  border-bottom: 1px solid var(--border-color);
+}
+
+.credentials:last-child,
+.org-info:last-child,
+.contact-methods:last-child,
+.professional-profiles:last-child {
+  border-bottom: none;
+}
+
+.profile-links {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.profile-links li {
+  margin-bottom: 0.75em;
+  padding-left: 0;
+}
+
+.profile-links a {
+  color: var(--link-color);
+  text-decoration: none;
+  padding: 0.5em 0.75em;
+  display: inline-block;
+  border-radius: 4px;
+  transition: background-color var(--transition-speed) ease;
+  background-color: var(--bg-secondary);
+  border: 1px solid var(--border-color);
+}
+
+.profile-links a:hover {
+  color: var(--link-hover);
+  background-color: #e0e0e0;
+}
+
+.profile-icon {
+  height: 1.3em;
+  width: 1.3em;
+  margin-right: 0.5em;
+  vertical-align: middle;
+  display: inline-block;
+}
+
+.profile-icon-text {
+  font-size: 1.3em;
+  margin-right: 0.5em;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+address {
+  font-style: normal;
 }
